k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        supplementalGroups:
        - 1002
      containers:
      - name: nextcloud
        image: nextcloud:31.0.2-apache
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
        - name: external-volume
          mountPath: /mnt/share
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-pvc
      - name: external-volume
        hostPath:
          path: /srv/share
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
  namespace: nextcloud
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-set-headers: nextcloud/nextcloud-proxy-headers
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nc.kb
      secretName: nextcloud-tls
    - hosts:
        - nc.ebic.tech
      secretName: nextcloud-tls-ebic
  rules:
    - host: nc.kb
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-svc
                port:
                  number: 80
    - host: nc.ebic.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-svc
                port:
                  number: 80
